--- a/app/views/lista/aeroportos.ejs
+++ b/app/views/lista/aeroportos.ejs
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-sm">
                 <h3> Buscar </h3>
-                <input type="text" name="busca" id="busca" required>
+                <input type="text" name="busca" id="busca" placeholder="Código do aeroporto" required>
 
                 <button type="submit" id="send-busca" class="btn btn-primary"> Enviar</button>
             
