--- a/app/views/lista/paises.ejs
+++ b/app/views/lista/paises.ejs
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-sm">
                 <h3> Buscar </h3>
-                <input type="text" name="busca" id="busca">
+                <input type="text" name="busca" id="busca" placeholder="Nome país">
     
                 <button type="submit" id="send-busca" class="btn btn-primary"> Enviar</button>
         
