--- a/app/views/lista/reservas.ejs
+++ b/app/views/lista/reservas.ejs
@@ -32,7 +32,7 @@
 
             <div class="col-sm">
                 <h3> Buscar </h3>
-                <input type="text" name="busca" id="busca" required>
+                <input type="text" name="busca" id="busca" placeholder="Código do passageiro" required>
 
                 <button type="submit" id="send-busca" class="btn btn-primary"> Enviar</button>
 
@@ -58,10 +58,10 @@
 
                 <thead class="thead-dark">
                     <tr>
-                        <th>CD_PSGR</th>
-                        <th>NR_VOO</th>
-                        <th>DT_SAIDA_VOO</th>
-                        <th>PC_DESC_PASG</th>
+                        <th>Código Passageiro</th>
+                        <th>Número do Voo</th>
+                        <th>Data saída</th>
+                        <th>Desconto Passagem</th>
                         <th>Editar</th>
                     </tr>
                 </thead>
