--- a/app/views/lista/voos.ejs
+++ b/app/views/lista/voos.ejs
@@ -29,7 +29,7 @@
             </div>
 
             <div class="col-sm">
-                <input type="text" name="busca" id="busca" required>
+                <input type="text" name="busca" id="busca" placeholder="ID do Voo" required>
 
                 <button type="submit" id="send-busca" class="btn btn-primary"> Enviar</button>
 
@@ -59,7 +59,7 @@
                         <th>ID</th>
                         <th>Data de saída</th>
                         <th>Numero Rota</th>
-                        <th>CD_ARNV</th>
+                        <th>Código da aeronave</th>
                         <th>Editar</th>
                     </tr>
                 </thead>
