--- a/app/views/lista/aeronaves.ejs
+++ b/app/views/lista/aeronaves.ejs
@@ -32,7 +32,7 @@
 
             <div class="col-sm">
                 <h3>Buscar</h3>
-                <input type="text" name="busca" id="busca" required>
+                <input type="text" name="busca" id="busca" placeholder="Código da aeronave" required>
 
                 <button type="submit" id="send-busca" class="btn btn-primary"> Enviar</button>
 
@@ -61,9 +61,9 @@
 
                 <thead class="thead-dark">
                     <tr>
-                        <th>CD_ARNV</th>
-                        <th>CD_EQPT</th>
-                        <th>CD_CMPN_AEREA</th>
+                        <th>Código Aeronave</th>
+                        <th>Código Equipamento</th>
+                        <th>Código Companhia Aérea</th>
                         <th>Editar</th>
                     </tr> 
                     
