--- a/app/views/lista/companhias.ejs
+++ b/app/views/lista/companhias.ejs
@@ -36,7 +36,7 @@
 
             <div class="col-sm">
                 <h3>Buscar</h3>
-                <input type="text" name="busca" id="busca"  required>
+                <input type="text" name="busca" id="busca" placeholder="nome companhia aérea" required>
 
                 <button type="submit" id="send-busca" class="btn btn-primary"> Enviar</button>
 
@@ -59,9 +59,9 @@
 
                 <thead class="thead-dark">
                     <tr>
-                        <th>CD_CMPN_AEREA</th>
-                        <th>NM_CMPN_AEREA</th>
-                        <th>CD_PAIS</th>
+                        <th>Código Companhia Aérea</th>
+                        <th>Nome Companhia Aérea</th>
+                        <th>Código País</th>
                         <th>Editar</th>
                         
                     </tr>
