--- a/app/views/lista/equipamentos.ejs
+++ b/app/views/lista/equipamentos.ejs
@@ -66,7 +66,7 @@
         
         <div class="container">
             <h3>Buscar</h3>
-            <input type="text" name="busca" id="busca" required>
+            <input type="text" name="busca" id="busca" placeholder="Código do Equipamento" required>
 
             <button type="submit" id="send-busca" class="btn btn-primary"> Enviar</button>
                     
@@ -83,12 +83,12 @@
 
                         <thead class="thead-dark">
                             <tr>
-                                <th>CD_EQPT</th>
-                                <th>NM_EQPT</th>
-                                <th>DC_TIPO_EQPT</th>
-                                <th>QT_MOTOR</th>
-                                <th>IC_TIPO_PRPS</th>
-                                <th>QT_PSGR</th>
+                                <th>Código</th>
+                                <th>Nome</th>
+                                <th>Tipo</th>
+                                <th>Quantidade Motor</th>
+                                <th>Tipo Propulsor</th>
+                                <th>Quantidade passageiro</th>
                                 <th>Editar</th>
                             </tr>
                         </thead>
@@ -189,6 +189,7 @@
                             a.href = '/equipamentos/editar/' + element.CD_EQPT;
 
                             var button = document.createElement('button');
+                            button.className = 'btn btn-info';
                             button.innerHTML = 'Editar';
 
                             a.appendChild(button);
@@ -275,6 +276,7 @@
                             a.href = '/equipamentos/editar/' + element.CD_EQPT;
 
                             var button = document.createElement('button');
+                            button.className = 'btn btn-info';
                             button.innerHTML = 'Editar';
 
                             a.appendChild(button);
@@ -360,6 +362,7 @@
                             a.href = '/equipamentos/editar/' + element.CD_EQPT;
 
                             var button = document.createElement('button');
+                            button.className = 'btn btn-info';
                             button.innerHTML = 'Editar';
 
                             a.appendChild(button);
@@ -445,6 +448,7 @@
                             a.href = '/equipamentos/editar/' + element.CD_EQPT;
 
                             var button = document.createElement('button');
+                            button.className = 'btn btn-info';
                             button.innerHTML = 'Editar';
 
                             a.appendChild(button);
