--- a/app/views/lista/uf.ejs
+++ b/app/views/lista/uf.ejs
@@ -22,7 +22,7 @@
 
         <div  class="row">
             <div  class="col-sm">
-                <input type="text" name="busca" id="busca" required>
+                <input type="text" name="busca" id="busca" placeholder="Nome UF" required>
         
                 <button class="btn btn-primary" type="submit" id="send-busca"> Enviar</button>
 
