--- a/app/views/lista/aeronaves.ejs
+++ b/app/views/lista/aeronaves.ejs
@@ -8,12 +8,13 @@
     <title>Aeronaves</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="display: flex;">
         
-        <a class="navbar-brand" href="/"><h1> SDA </h1></a>   
-        <img src="/img/logo.png" />           
+        <a class="navbar-brand" href="/"><h2> SDA </h2></a>   
+        <img src="/img/logo.png" />     
+        <h2 style="margin-left: auto;">Aeronaves</h2>      
     </nav>
-    <h1>Aeronaves</h1>
+    <br>
 
     <div class="container">
         <div class="row">
