--- a/app/views/cadastro/cadastro_companhia.ejs
+++ b/app/views/cadastro/cadastro_companhia.ejs
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <a class="navbar-brand" href="/"><h2> SDA </h2></a>        
+    </nav>
 
     <div class="container">
         <h1>Cadastro Companhia aérea</h1>
