--- a/app/views/lista/aeroportos.ejs
+++ b/app/views/lista/aeroportos.ejs
@@ -8,15 +8,16 @@
     <title>Aeroportos</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="display: flex;">
         
-        <a class="navbar-brand" href="/"><h1> SDA </h1></a> 
-        <img src="/img/logo.png" />             
+        <a class="navbar-brand" href="/"><h2> SDA </h2></a> 
+        <img src="/img/logo.png" />   
+        <h2 style="margin-left: auto;">Aeroportos</h2>          
     </nav>
 
+<br>
 
 
-    <h1>Aeroportos</h1>
 
     <div class="container">
         <div class="row">
