--- a/app/views/lista/equipamentos.ejs
+++ b/app/views/lista/equipamentos.ejs
@@ -8,13 +8,14 @@
     <title>Equipamentos</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="display: flex;">
         
-        <a class="navbar-brand" href="/"><h1> SDA </h1></a>   
-        <img src="/img/logo.png" />           
+        <a class="navbar-brand" href="/"><h2> SDA </h2></a>   
+        <img src="/img/logo.png" /> 
+        <h2 style="margin-left: auto;">Equipamentos</h2>          
     </nav>
-    <h1>Equipamentos</h1>
-
+    
+    <br>
     
 
     <div class="container">
