--- a/app/views/lista/paises.ejs
+++ b/app/views/lista/paises.ejs
@@ -9,14 +9,14 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="display: flex;">
         
-        <a class="navbar-brand" href="/"><h1> SDA </h1></a> 
-        <img src="/img/logo.png" />             
+        <a class="navbar-brand" href="/"><h2> SDA </h2></a> 
+        <img src="/img/logo.png" />  
+        <h2 style="margin-left: auto;">Países</h2>
+           
     </nav>
-
-    <h1>Países</h1>
-
+<br>
     <div class="container">
         <div class="row">
             <div class="col-sm">
