--- a/app/views/lista/passageiros.ejs
+++ b/app/views/lista/passageiros.ejs
@@ -8,18 +8,21 @@
     <title>Passageiros</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="display: flex;">
         
-        <a class="navbar-brand" href="/"><h1> SDA </h1></a> 
-        <img src="/img/logo.png" />             
+        <a class="navbar-brand" href="/"><h2> SDA </h2></a> 
+        <img src="/img/logo.png" /> 
+        
+        <h2 style="margin-left: auto;">Passageiros</h2>
     </nav>
     
-    <h1>Passageiros</h1>
-
+    
+<br>
     
    
 
     <div class="container">
+
         
         <div class="row">
           <div class="col-sm">
@@ -28,12 +31,6 @@
             <label for="solteiro">Solteiro(a)</label><br>
             <input type="checkbox" id="casado" name="estado" value="C">
             <label for="casado">Casado(a)</label><br>
-          </div>
-          <div class="col-sm">
-            <h3>Idade</h3>
-
-            <label>Maior que: </label>
-            <input type="number" id="maior_idade" name="idade" value=""/>
           </div>
           <div class="col-sm">
               <h3> Buscar </h3>
@@ -52,7 +49,7 @@
         </div>
       </div>
     
-    
+    <br>
         
     <div id="resultados" class="container" style="width: 80%;">
         <table id="table-passageiros" class="table table-sm">
@@ -352,122 +349,7 @@
                     },
                 
             });
-        })
-
-
-
-        $('#maior_idade').blur(function(){
-            
-            const busca = $('#busca').val();
-
-            let solteiroCheck = document.getElementById('solteiro');
-
-            let casadoCheck = document.getElementById('casado');
-            
-            var status;
-
-            if(solteiroCheck.checked){
-                status ='S';
-            }else if(casadoCheck.checked){
-                status ='C';
-            } else{
-                status = null;
-            }
-            
-
-            const anoParam = $('#maior_idade').val();
-
-            var calcIdade;
-            const d = new Date();
-            var anoAtual = d.getFullYear();
-
-            if(anoParam != ''){
-                calcIdade = anoAtual - anoParam;
-                $.ajax({
-                url: '/passageiros/filtro/',
-                method: 'GET',
-                data: {
-                    busca: busca,
-                    status: status,
-                    idade: calcIdade,
-                },
-                success: response =>{
-                        //console.log(response);
-
-                        const passageiros = response;
-                           
-                        $('tr').remove(".resultado-passageiros");
-
-                        const table = document.getElementById('table-passageiros');
-
-                        passageiros.forEach(element => {
-
-                            let tr = document.createElement('tr');
-                            tr.className = "resultado-passageiros";
-
-                            var td1 = document.createElement('td');
-                            td1.innerHTML  = element.CD_PSGR;
-
-                            var td2 = document.createElement('td');
-                            td2.innerHTML = element.NM_PSGR;
-
-                            var td3 = document.createElement('td');
-                            td3.innerHTML = element.IC_SEXO_PSGR;
-
-                            var td4 = document.createElement('td');
-                            td4.innerHTML = element.DT_NASC_PSGR ;
-
-                            var td5 = document.createElement('td');
-                            td5.innerHTML = element.IC_ESTD_CIVIL ;
-
-                            var td6 = document.createElement('td');
-                            element.IC_CD_PSGR_RESP == undefined ? td6.innerHTML = '' : td6.innerHTML = element.IC_CD_PSGR_RESP ;
-
-                            var td7 = document.createElement('td');
-                            td7.innerHTML = element.CD_PAIS ;
-
-                            var td8 = document.createElement('td');
-                            
-                            var a = document.createElement('a');
-                            a.href = '/passageiros/editar/' + element.CD_PSGR;
-
-                            var button = document.createElement('button');
-                            button.className = 'btn btn-info';
-                            button.innerHTML = 'Editar';
-
-                            a.appendChild(button);
-
-                            td8.appendChild(a);
-
-
-                            tr.appendChild(td1);
-                            tr.appendChild(td2);
-                            tr.appendChild(td3);
-                            tr.appendChild(td4);
-                            tr.appendChild(td5);
-                            tr.appendChild(td6);
-                            tr.appendChild(td7);
-                            tr.appendChild(td8);
-
-                            table.appendChild(tr);
-
-                        }); 
-                        
-                    },
-                });
-            }
-
-            
-
-            
-            
-            
-
-        });
-            
-
-        
-
+        });  
       
         
     });
