--- a/app/views/lista/uf.ejs
+++ b/app/views/lista/uf.ejs
@@ -8,14 +8,15 @@
     <title>Unidades Federais</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="display: flex;">
         
-        <a class="navbar-brand" href="/"><h1> SDA </h1></a> 
-        <img src="/img/logo.png" />             
+        <a class="navbar-brand" href="/"><h2> SDA </h2></a> 
+        <img src="/img/logo.png" />       
+        <h2 style="margin-left: auto;">Unidades Federais</h2>      
     </nav>
 
 
-    <h1>Unidades Federais</h1>
+    <br>
 
     <div class="container">
         
