--- a/app/views/editar/editar_aeroporto.ejs
+++ b/app/views/editar/editar_aeroporto.ejs
@@ -73,7 +73,7 @@
             
             if(check){
                 $.ajax({
-                    url: '/aeroportos/editar/deletar/' + aeroporto.CD_EQPT  ,
+                    url: '/aeroportos/editar/deletar/' + aeroporto.CD_ARPT  ,
                     method: 'POST',
                     success: response =>{
                         console.log(response);
