--- a/app/views/lista/voos.ejs
+++ b/app/views/lista/voos.ejs
@@ -142,6 +142,7 @@
 
                             var button = document.createElement('button');
                             button.innerHTML = 'Editar';
+                            button.className="btn btn-info";
 
                             a.appendChild(button);
 
