--- a/app/views/lista/companhias.ejs
+++ b/app/views/lista/companhias.ejs
@@ -209,6 +209,7 @@
 
                             var button = document.createElement('button');
                             button.innerHTML = 'Editar';
+                            button.className="btn btn-info";
 
                             a.appendChild(button);
 
